Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -2,6 +2,7 @@
     position: relative;
     height: 100vh;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .parallax-container::before {
